--- a/app/home/src/main/res/layout/item_book.xml
+++ b/app/home/src/main/res/layout/item_book.xml
@@ -4,52 +4,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    android:background="#E8E8E8"
+    android:layout_margin="8dp"
+    android:layout_height="144dp">
+    <TextView
+        android:id="@+id/image_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
         android:layout_margin="8dp"
-        android:background="@color/purple_500"
+        tools:text="Hobbit"
+        android:textColor="@color/purple_500"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/image_book"
-            android:layout_width="96dp"
-            android:layout_height="160dp"
-            android:layout_margin="4dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background"
-            tools:ignore="VectorDrawableCompat" />
-
-        <TextView
-            android:id="@+id/name_book"
-            android:layout_width="96dp"
-            android:layout_height="38dp"
-            android:gravity="center"
-            android:padding="2dp"
-            android:maxLines="2"
-            android:maxWidth="96dp"
-            android:maxHeight="38dp"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/image_book"
-            app:layout_constraintStart_toStartOf="@+id/image_book"
-            app:layout_constraintTop_toBottomOf="@+id/image_book"
-            tools:text="Hobbit" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:ignore="VectorDrawableCompat" />
+    <TextView
+        android:id="@+id/name_book"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        tools:text="Hobbit"
+        android:textColor="@color/purple_500"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_book"
+        app:layout_constraintStart_toEndOf="@+id/image_book"
+        app:layout_constraintTop_toTopOf="@+id/image_book" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content">-->
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="2dp"-->
+<!--        android:layout_margin="8dp"-->
+<!--        android:background="@color/purple_500"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/image_book"-->
+<!--            android:layout_width="96dp"-->
+<!--            android:layout_height="160dp"-->
+<!--            android:layout_margin="4dp"-->
+<!--            android:layout_marginStart="32dp"-->
+<!--            android:layout_marginLeft="32dp"-->
+<!--            android:layout_marginEnd="32dp"-->
+<!--            android:layout_marginRight="32dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.496"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:srcCompat="@drawable/ic_launcher_background"-->
+<!--            tools:ignore="VectorDrawableCompat" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/name_book"-->
+<!--            android:layout_width="96dp"-->
+<!--            android:layout_height="38dp"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="2dp"-->
+<!--            android:maxLines="2"-->
+<!--            android:maxWidth="96dp"-->
+<!--            android:maxHeight="38dp"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="12sp"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/image_book"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/image_book"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/image_book"-->
+<!--            tools:text="Hobbit" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
