--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,15 +21,7 @@
         android:id="@+id/navigation_search"
         android:name="com.example.find.FindFragment"
         android:label="Search"
-        tools:layout="@layout/fragment_find" >
-        <action
-            android:id="@+id/action_navigation_search_to_bottomSheetFragment"
-            app:destination="@id/bottomSheetFragment" />
-    </fragment>
-    <dialog
-        android:id="@+id/bottomSheetFragment"
-        android:name="com.example.find.BottomSheetFragment"
-        android:label="fragment_bottom_sheet"
-        tools:layout="@layout/fragment_bottom_sheet" />
+        tools:layout="@layout/fragment_find" />
+
 
 </navigation>
